[package]
name = "rust_web_service_actix"
version = "0.2.0"
authors = ["x1- <viva008@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
actix        = "^0.5.7"
actix-web    = "^0.6"
futures      = "^0.1"
serde        = "^1.0.63"
serde_derive = "^1.0.63"
serde_json   = "^1.0.18"
